--- a/examples/source/1.components/amp-recaptcha-input/index.html
+++ b/examples/source/1.components/amp-recaptcha-input/index.html
@@ -80,8 +80,8 @@
       <input name="submit-button" type="submit" value="Search">
       <amp-recaptcha-input layout="nodisplay" 
                            name="recaptcha_token" 
-                           data-sitekey="6LfcQ7IUAAAAAIv1KcgqyExGK0v8dLJtvV_Q6xD-" 
-                           data-action="recaptcha_example">
+                           data-sitekey="6Lfzhf4ZAAAAAO7aHjpRwM2kLZXq39enMn1eyry8" 
+                           data-action="recaptcha_akarrd7">
       </amp-recaptcha-input>
     </fieldset>
 
